2007-02-05  Brian Warner  <warner@lothar.com>

	* buildbot/status/mail.py (MailNotifier.__init__): assert that 'mode'
	is one of the three known values, otherwise we emit some confusing
	messages later on. Thanks to Grig Gheorghiu for the catch.

2007-01-30  Brian Warner  <warner@lothar.com>

	* buildbot/changes/bonsaipoller.py (BonsaiParser.__init__): Ben
	Hearsum contributed a patch to let BonsaiPoller work with results
	that contain non-ascii characters. Closes SF#1632641.

2007-01-27  Brian Warner  <warner@lothar.com>

	* Makefile (release): produce both .tar.gz and .zip source bundles.
	Closes SF#1222216.

2007-01-23  Brian Warner  <warner@lothar.com>

	* buildbot/changes/freshcvsmail.py: hush a pyflakes warning
	* buildbot/changes/monotone.py: same

	* buildbot/changes/maildir.py: combine several files into one,
	clean up maildir.py to use Services properly.
	* buildbot/changes/maildirtwisted.py: remove
	* buildbot/changes/maildirgtk.py: remove, it wasn't used by
	buildbot anyways.
	* buildbot/changes/mail.py: match the change
	* buildbot/scheduler.py: same, since Try_Jobdir uses a maildir
	* buildbot/test/test_maildir.py: remove use of reactor.iterate()

	* buildbot/slave/commands.py (command_version): bump to "2.3" to
	indicate that the buildslave knows about the 'bzr' command

2007-01-22  Brian Warner  <warner@lothar.com>

	* buildbot/process/builder.py (Builder.fireTestEvent): don't use
	'with', it will become a reserved work in python2.6 .

	* contrib/bb_applet.py: add a simple gnome-panel applet, to
	display a terse summary of buildbot status.
	* docs/hexnut32.png, docs/hexnut48.png, docs/hexnut64.png: add
	some icons, small versions of the Blender object that lives in
	docs/images/icon.blend

	* buildbot/steps/source.py (Bzr): add Bazaar-ng support
	* buildbot/slave/commands.py (Bzr): same
	* buildbot/scripts/tryclient.py (BzrExtractor): same
	(SourceStampExtractor.dovc): modify this to allow non-zero exit
	status, since 'bzr diff' does that