@@ -1,3 +1,10 @@
+2007-02-06  Brian Warner  <warner@lothar.com>
+
+	* buildbot/test/test_steps.py (BuildStep): remove use of
+	reactor.iterate(), although the technique I replaced it with is a
+	gross polling hack that must be cleaned up properly some day. This
+	was the last use of reactor.iterate in the entire tree, yay.
+
 2007-02-05  Brian Warner  <warner@lothar.com>
 
 	* buildbot/status/mail.py (MailNotifier.__init__): assert that 'mode'
